--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
+    "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
