--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-stripe-checkout": "^2.6.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
